# vnc-web-browser

./: README.md
QtBrowser/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  vncserver.cpp  vncserver.h
VNC_Client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  vncclient.cpp  vncclient.h  vncviewerwidget.cpp  vncviewerwidget.h
